Fix text-align property for RTL layout on mobiles

--- a/_less/rtl.less
+++ b/_less/rtl.less
@@ -34,16 +34,11 @@ p{
 .menusimple li a:visited,
 .menusimple li a:link{
 	font-family:'DroidNaskh', sans-serif;
+	text-align:right;
 }
 .menusimple li ul{
 	right:0;
 	left:auto;
-}
-.menusimple li ul li a,
-.menusimple li ul li a:active,
-.menusimple li ul li a:visited,
-.menusimple li ul li a:link{
-	text-align:right;
 }
 .footer{
 	text-align:right;
